--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
         <div class="w-col w-col-3 w-col-small-6">
           <div class="team-member">
             <div class="hover-content">
-              <p>My coo description of myself here, My coo description of myself here, My coo description of myself here, My coo description of myself here, My coo description of myself here, My coo description of myself here, My coo description of myself here, My coo description of myself here, My coo description of myself here, My coo description of myself here,</p>
+              <p>Louis is a lifelong technologist & traveller, and an avid advocate for equitable education.</p>
+              <p>When not helping solve technical & business problems, he's either mentoring young people from age 12-24 in tech and engineering or exploring nature.</p>
             </div>
             <img src="images/louis_bw.jpeg" class="image-7">
             <div class="name">Louis Kinley</div>
@@ -101,7 +102,7 @@
         <div class="w-col w-col-3 w-col-small-6">
           <div class="team-member">
             <div class="hover-content">
-              <p>My coo description of myself here</p>
+              <p>My bio: </p>
             </div>
             <img src="images/daniel_bw.jpg" class="image-7">
             <div class="name">Daniel Phillips</div>
@@ -112,7 +113,7 @@
         <div class="w-col w-col-3 w-col-small-6">
           <div class="team-member">
             <div class="hover-content">
-              <p>My coo description of myself here</p>
+              <p>My bio: </p>
             </div>
             <img src="images/darion_bw.jpg" class="image-7">
             <div class="name">Darion Hernandez</div>
@@ -126,7 +127,7 @@
         <div class="w-col w-col-3 w-col-small-6">
           <div class="team-member">
             <div class="hover-content">
-              <p>My coo description of myself here</p>
+              <p>My bio: </p>
             </div>
             <img src="images/michael_bw.jpg" class="image-7">
             <div class="name">Michael Ali</div>
@@ -137,7 +138,7 @@
         <div class="w-col w-col-3 w-col-small-6">
           <div class="team-member">
             <div class="hover-content">
-              <p>My coo description of myself here</p>
+              <p>My bio: </p>
             </div>
             <img src="images/gabriela_bw.jpg" class="image-7">
             <div class="name">Gabriela Sewdhan</div>
@@ -148,7 +149,7 @@
         <div class="w-col w-col-3 w-col-small-6">
           <div class="team-member">
             <div class="hover-content">
-              <p>My coo description of myself here</p>
+              <p>My bio: </p>
             </div>
             <img src="images/misha_bw.jpeg" class="image-7">
             <div class="name">Mikhael Litchev</div>
